--- a/UniversalBank/pom.xml
+++ b/UniversalBank/pom.xml
@@ -137,9 +137,14 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.1</version>
 		</dependency>
+		
+	<dependency>
+  <groupId>org.glassfish</groupId>
+  <artifactId>javax.json</artifactId>
+  <version>1.0.4</version>
+</dependency>
+	
 	</dependencies>
-
-
 
 	<build>
 		<finalName>UniversalBankingSystem</finalName>
