--- a/UniversalBank/pom.xml
+++ b/UniversalBank/pom.xml
@@ -6,7 +6,6 @@
   <packaging>war</packaging>
   <name>Universal Bank</name>
   <url>http://maven.apache.org</url>
-
 	<properties>
 		<spring.version>4.1.1.RELEASE</spring.version>
 		<jdbc.version>3.2.8.RELEASE</jdbc.version>
@@ -16,6 +15,20 @@
 	</properties>
 
 	<dependencies>
+	   
+
+  <dependency>
+    <groupId>javax.servlet.jsp</groupId>
+    <artifactId>javax.servlet.jsp-api</artifactId>
+    <version>2.2.1</version>
+    <scope>provided</scope>
+  </dependency>
+	  <dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20150729</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -147,6 +160,6 @@
 	</dependencies>
 
 	<build>
-		<finalName>Universal</finalName>
+		<finalName>UniversalBankingSystem</finalName>
 	</build>
 </project>
