--- a/UniversalBank/pom.xml
+++ b/UniversalBank/pom.xml
@@ -137,10 +137,12 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.4</version>
+		</dependency>
 	</dependencies>
-
-
-
 	<build>
 		<finalName>UniversalBankingSystem</finalName>
 	</build>
