--- a/UniversalBank/src/main/webapp/WEB-INF/web.xml
+++ b/UniversalBank/src/main/webapp/WEB-INF/web.xml
@@ -47,4 +47,13 @@
 		<location>/WEB-INF/views/page-404.jsp</location>
 	</error-page>
 
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>UniversalBank</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint> 
 </web-app>
