--- a/UniversalBank/src/main/webapp/WEB-INF/web.xml
+++ b/UniversalBank/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,14 @@
 	version="2.5">
 	<display-name>UniversalBank</display-name>
 	<!-- Spring MVC -->
+	<filter> 
+<filter-name>NoCacheFilter</filter-name> 
+<filter-class> edu.asu.ss2015.group4.controller.NoCacheFilter</filter-class> 
+	</filter> 
+<filter-mapping> 
+<filter-name>NoCacheFilter</filter-name> 
+<url-pattern>/*</url-pattern> 
+</filter-mapping> 
 	<servlet>
 		<servlet-name>spring-mvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -46,5 +54,14 @@
 		<error-code>404</error-code>
 		<location>/WEB-INF/views/page-404.jsp</location>
 	</error-page>
+	<error-page>
+	<error-code>500</error-code>
+		<location>/WEB-INF/views/page-404.jsp</location>
+	</error-page>
 
+	<session-config>
+		<session-timeout>5</session-timeout>
+	</session-config>
+	
+	
 </web-app>
