--- a/UniversalBank/pom.xml
+++ b/UniversalBank/pom.xml
@@ -26,6 +26,12 @@
 		<artifactId>log4j</artifactId>
 		<version>1.2.17</version>
 		</dependency>
+		<dependency>
+	<groupId>org.owasp.esapi</groupId>
+	<artifactId>esapi</artifactId>
+	<version>2.1.0</version>
+	</dependency>
+			
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
