--- a/UniversalBank/src/main/webapp/WEB-INF/web.xml
+++ b/UniversalBank/src/main/webapp/WEB-INF/web.xml
@@ -73,7 +73,7 @@
 	</error-page>
 	<error-page>
 	<exception-type>java.lang.Throwable</exception-type>
-	<location>/page-404.jsp</location>
+	<location>/WEB-INF/views/500.jsp</location>
 	</error-page>
 
 	
